# Raytracing-parallel-performance

./: .gitignore  README.md
PracticaRayTracing/RaytracingCPU/: CMakeLists.txt  main_frames.cpp  main_mpi_openmp.cpp  main_sequencial.cpp
PracticaRayTracing/RaytracingCPU/implementations/: Crystalline.cpp  RayTracingImplementations.cpp  RayTracingImplementations.hpp  Scene.cpp
PracticaRayTracing/RaytracingCPU/mpi/: main_mpi_chunk_dinamico_64.cpp  main_mpi_chunk_estatico.cpp  main_mpi_columns.cpp  main_mpi_frames.cpp  main_mpi_rows.cpp
PracticaRayTracing/RaytracingCPU/openmp/: main_blocks.cpp  main_columns.cpp  main_frames_openmp.cpp  main_omp_chunk_dinamico.cpp  main_omp_chunk_estatico_auto.cpp  main_omp_chunk_estatico_manual.cpp  main_rows.cpp
PracticaRayTracing/RaytracingGPU/: CMakeLists.txt  Camera.cuh  CollisionData.cuh  Crystalline.cu  Crystalline.cuh  Diffuse.cuh  Material.cuh  Metallic.cu  Metallic.cuh  Object.cuh  Ray.cuh  Scene.cu  Scene.cuh  Shape.cuh  Sphere.cu  Sphere.cuh  Vec3.cuh  main_blocks.cu  main_columns.cu  main_multi.cu  main_rows.cu  random.cu  random.cuh  raytracing.cu  raytracing.cuh  utils.cu  utils.cuh
